<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:orientation="vertical"
             tools:context=".ShowTextActivity">

    <TextView
            android:id="@+id/show_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world"
            android:layout_gravity="center"/>


    <EditText
        android:layout_marginTop="20dp"
        android:hint="Hello"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:id="@+id/hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/showTest"
        android:layout_marginTop="20dp"
        android:focusable="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:text="Show Test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:targetApi="lollipop" />

</LinearLayout>
