<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".TestActivity">


    <TextView
        android:gravity="center"
        android:layout_gravity="center"
        tools:text="Hello"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:id="@+id/test_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>